--- a/src/KDSA.API/appsettings.json
+++ b/src/KDSA.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Gemini": {
+    "ApiKey": "AIza_ILE_BASLAYAN_SIFRE",
+    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent"
+  }
+
 }
