M2 Decision Engine ve M3 Alexandra Audit Log altyapisi eklendi

--- a/src/KDSA.API/appsettings.json
+++ b/src/KDSA.API/appsettings.json
@@ -9,6 +9,10 @@
   "Gemini": {
     "ApiKey": "AIza_ILE_BASLAYAN_SIFRE",
     "BaseUrl": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent"
+  },
+  "Baserow": {
+    "BaseUrl": "https://baserow.koruimpact.org", // Veya "https://api.baserow.io"
+    "ApiToken": "BASEROW_API_TOKEN_BURAYA",
+    "AuditLogTableId": "12345" // Baserow'daki Tablo ID'si
   }
-
 }
