--- a/src/KDSA.Infrastructure/KDSA.Infrastructure.csproj
+++ b/src/KDSA.Infrastructure/KDSA.Infrastructure.csproj
@@ -1,6 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\KDSA.Application\KDSA.Application.csproj" />
     <ProjectReference Include="..\KDSA.Domain\KDSA.Domain.csproj" />
   </ItemGroup>
