Backend: M1 ACORE Service ve M3 Alexandra Service entegrasyonları yapıldı

--- a/src/KDSA.API/KDSA.API.csproj
+++ b/src/KDSA.API/KDSA.API.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
