--- a/src/KDSA.API/appsettings.json
+++ b/src/KDSA.API/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "Gemini": {
-    "ApiKey": "AIza_ILE_BASLAYAN_SIFRE",
-    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent"
+    "ApiKey": "AIzaSyBcgIC6Xk38r5ljR10FWSjQKABiFA5rVhE",
+    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent"
   },
   "Baserow": {
     "BaseUrl": "https://baserow.koruimpact.org", // Veya "https://api.baserow.io"
-    "ApiToken": "BASEROW_API_TOKEN_BURAYA",
-    "AuditLogTableId": "12345" // Baserow'daki Tablo ID'si
+    "ApiToken": "xOnTH8bhfi3tOVcoakO3TyiSHP6uyhag",
+    "AuditLogTableId": "735" // Baserow'daki Tablo ID'si
   }
 }
