--- a/src/KDSA.API/appsettings.json
+++ b/src/KDSA.API/appsettings.json
@@ -11,8 +11,15 @@
     "BaseUrl": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent"
   },
   "Baserow": {
-    "BaseUrl": "https://baserow.koruimpact.org", // Veya "https://api.baserow.io"
+    "BaseUrl": "https://baserow.koruimpact.org",
     "ApiToken": "xOnTH8bhfi3tOVcoakO3TyiSHP6uyhag",
-    "AuditLogTableId": "735" // Baserow'daki Tablo ID'si
+    "AuditLogTableId": "735", // Baserow'daki Tablo ID'si
+    "UsersTableId": "736" // Baserow'daki Tablo ID'si
+  },
+  "JwtSettings": {
+    "SecretKey": "BU_COK_GIZLI_VE_UZUN_BIR_SIFRE_OLMALI_EN_AZ_32_KARAKTER",
+    "Issuer": "KDSA.Backend",
+    "Audience": "KDSA.Frontend",
+    "ExpiryMinutes": 120
   }
 }
