Backend: Gemini 2.5 fix ve DTO parsing guncellemesi

--- a/src/KDSA.Infrastructure/KDSA.Infrastructure.csproj
+++ b/src/KDSA.Infrastructure/KDSA.Infrastructure.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\KDSA.Application\KDSA.Application.csproj" />
     <ProjectReference Include="..\KDSA.Domain\KDSA.Domain.csproj" />
+	<ProjectReference Include="..\KDSA.Core\KDSA.Core.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
