--- a/src/KDSA.Core/KDSA.Core.csproj
+++ b/src/KDSA.Core/KDSA.Core.csproj
@@ -1,14 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-	  <ProjectReference Include="..\KDSA.Domain\KDSA.Domain.csproj" />
-	  <ProjectReference Include="..\KDSA.Core\KDSA.Core.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+  </ItemGroup>
 
 </Project>
