FIXED: Restored KDSA.API and dependencies

--- a/src/KDSA.API/appsettings.Development.json
+++ b/src/KDSA.API/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "super_secret_key_for_development_only_12345",
+    "Issuer": "KDSA_API",
+    "Audience": "KDSA_Client",
+    "ExpiryMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
